# sandbox

./: .gitignore
gleam/1sttrial/: .gitignore  flake.nix  gleam.toml  shell.nix
gleam/1sttrial/src/: hi.gleam
haskell/: flake.nix  shell.nix
haskell/di/: Main.hs
haskell/doubling/: Doubling.hs
haskell/fop/: fop.cabal  hie.yml
haskell/fop/app/sudoku/: Main.hs
haskell/freemonad-mtl-tagless_final/: CHANGELOG.md  freemonad-mtl-tagless-final.cabal  hie.yaml  shell.nix
haskell/freemonad-mtl-tagless_final/app/: CooperativeThread.hs  FreeMonad.hs  Main.hs
haskell/freer-monad/: README.md  freer-monad.cabal  hie.yaml
haskell/freer-monad/app/: Eff.hs  FFree.hs  Free.hs  It.hs  Main.hs  RWIt.hs  Union.hs
haskell/http-client/: hie.yaml  http-client.cabal
haskell/http-client/app/: Main.hs
haskell/ihp-gettings-started/blog/: flake.nix
haskell/implement-a-chat-server/: implement-a-chat-server.cabal  shell.nix
haskell/implement-a-chat-server/app/: Client.hs  Server.hs
haskell/learn/: DataKinds.hs  Families.hs  Forall.hs  TypeFamilies.hs  TypeLevel.hs
haskell/repmin/: Main.hs  shell.nix
haskell/rwh/: hie.yaml  rwh.cabal  shell.nix
haskell/rwh/ch24/: Chan.hs  Compressor.hs  Expensive.hs  MVarExample.hs  Main.hs  ModifyMVarStrict.hs  NiceFork.hs
haskell/servant-trial/: CHANGELOG.md  servant-trial.cabal  shell.nix  template
haskell/servant-trial/example1/: Main.hs
haskell/servant-trial/example2/: Main.hs
haskell/servant-trial/example3/: Main.hs
haskell/servant-trial/example4/: Main.hs
haskell/servant-trial/example5/: Main.hs
haskell/servant-trial/example6/: Main.hs
haskell/servant-trial/example7/: Main.hs
haskell/servant-trial/example8/: Main.hs
haskell/servant-trial/example9/: Main.hs
haskell/string/: string.cabal
haskell/string/app/: Main.hs
haskell/transform/: transform.cabal
haskell/transform/app/: Main.hs
haskell/vec/: CHANGELOG.md  cabal.project.local  vec.cabal
haskell/vec/app/: Main.hs
haskell/xsv/: hie.yaml  shell.nix  xsv.cabal
haskell/xsv/app/: Main.hs
haskell/xsv/examples/: escaped.csv  normal.csv
haskell/xsv/lib/: Xsv.hs
haskell/xsv/test/: main.hs
java/newbie/: .gitignore  .project  settings.gradle  shell.nix
java/newbie/app/: .project  build.gradle
java/newbie/app/src/main/java/newbie/: Annotation.java  App.java  Generics.java  Interfaces.java  LambdaExpression.java  Polymorphism.java  Super.java
java/newbie/app/src/main/java/newbie/hoge/: ChildPackage.java
java/newbie/app/src/test/java/newbie/: AppTest.java
lean4/learn-lean/: .gitignore  PropositionsAsTypes.lean  PropositionsAsTypesExercise.lean  QuantifiersAndEquality.lean  README.md  SimpleTypeTheory.lean  box  distrobox.ini
nim/: Makefile  hello
nim/nimcache/: hello.c  hello.json  stdlib_system.c
nim/tutorial/: Makefile
rust/: Cargo.toml  Makefile
rust/adder/: Cargo.toml  Makefile
rust/adder/src/: lib.rs
rust/adder/src/tests/: lib.rs
rust/city/: Cargo.toml  Makefile
rust/city/src/: main.rs
rust/dining_philosopers/: Cargo.toml  Makefile
rust/dining_philosopers/src/: main.rs
rust/err/: Cargo.toml  Makefile
rust/err/src/: main.rs
rust/playground/: Cargo.toml  Makefile
rust/src/: main.rs
rust/syntax/: Cargo.toml  Makefile
rust/syntax/src/: main.rs
rust/tutorial/: Makefile
scala/: Dockerfile  d
