cabal-version: 3.0
name:          freemonad-mtl-tagless-final
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable x
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , containers
    , free
    , mtl

  hs-source-dirs:   app
  default-language: Haskell2010
  other-modules:
    CooperativeThread
    FreeMonad
