cabal-version:   3.0
name:            freer-monad
version:         0.1.0.0
license:         NONE
author:          924277+mtwtkman@users.noreply.github.com
maintainer:      mtwtkman
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable freer-monad
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: It
