cabal-version: 3.0
name:          implement-a-chat-server
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable server
  import:           warnings
  main-is:          Server.hs
  build-depends:
    , base
    , network
    , bytestring

  hs-source-dirs:   app
  default-language: Haskell2010

executable client
  import:           warnings
  main-is:          Client.hs
  build-depends:
    , base
    , network
    , bytestring

  hs-source-dirs:   app
  default-language: Haskell2010
