cabal-version: 3.0
name:          servant-trial
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable example1
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , mtl
    , servant
    , servant-server
    , time
    , wai
    , warp

  hs-source-dirs:   example1
  default-language: Haskell2010

executable example2
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , mtl
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:   example2
  default-language: Haskell2010

executable example3
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , attoparsec
    , base
    , blaze-html
    , blaze-markup
    , http-media
    , lucid
    , mtl
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:   example3
  default-language: Haskell2010

executable example4
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , directory
    , mtl
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:   example4
  default-language: Haskell2010

executable example5
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , mtl
    , servant
    , servant-server
    , time
    , wai
    , warp

  hs-source-dirs:   example5
  default-language: Haskell2010

executable example6
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , mtl
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:   example6
  default-language: Haskell2010

executable example7
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , mtl
    , servant
    , servant-server
    , time
    , wai
    , warp

  hs-source-dirs:   example7
  default-language: Haskell2010

executable example8
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , http-client
    , servant
    , servant-client
    , servant-server
    , wai
    , warp

  hs-source-dirs:   example8
  default-language: Haskell2010

executable example9
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , cookie
    , servant
    , servant-server
    , text
    , wai
    , warp

  hs-source-dirs:   example9
  default-language: Haskell2010
