cabal-version:   3.0
name:            string
version:         0.1.0.0
author:          924277+mtwtkman@users.noreply.github.com
maintainer:      mtwtkman
build-type:      Simple

common warnings
    ghc-options: -Wall

executable string
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, text , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
