cabal-version:   3.0
name:            vec
version:         0.1.0.0
license:         NONE
author:          924277+mtwtkman@users.noreply.github.com
maintainer:      mtwtkman
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable vec
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, vector, bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
